# audio_eval

./: .gitignore  CITATION.cff  LICENSE  README.md  example.sh  get_jsonl.py  pyproject.toml
audio_eval/: __init__.py  audio.py  cache.py  cli.py  common.py  eval_generation.py  eval_recon.py  eval_sr.py  eval_tts.py  eval_v2a.py  runner.py  utils.py
audio_eval/assets/openl3_fd/: NOTICE.md
audio_eval/assets/passt_kl/: NOTICE.md
audio_eval/assets/prompts/: NOTICE.md
audio_eval/features/: __init__.py  openl3.py  panns.py  passt.py  vggish.py
audio_eval/metrics/: __init__.py  audiobox.py  clap.py  desync.py  fd.py  imagebind.py  inception_score.py  kl.py  lsd.py  mel_stft.py  panns.py  pesq.py  speaker_sim.py  stoi.py  utmos.py  wer.py
examples/DAC_16k_nq12/: README.md  recon.jsonl  run.sh
examples/MMAudio_S_16kHz_VGGSound/: README.md  run.sh  v2a.jsonl  v2a_with_silence_video.jsonl
examples/MMAudio_S_16kHz_VGGSound/reference_audio/: ---g-f_I2yQ_000001.flac  --U7joUcTCo_000000.flac
examples/Qwen3TTS_12Hz_0.6B_Base_SeedTTS_ZH/: README.md  run.sh  tts.jsonl
examples/StableAudioOpen_AudioCaps/: README.md  run.sh  tta.jsonl
examples/StableAudioOpen_SongDescriber/: README.md  run.sh  ttm.jsonl  ttm_with_reference.jsonl
examples/UniFlowAudio_SR_VCTK/: README.md  run.sh  sr.jsonl
tmp_t2m/: run_stable_audio_open_songdescriber_nosinging.sh
tmp_t2m/stable_audio_open_songdescriber_nosinging/20260721_004124/matplotlib/: fontlist-v390.json
tmp_v2a/: ib_score.py  v2sfx_full_duration.py
