[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-eval"
version = "0.1.0"
description = "A composable toolkit for evaluating generated and reconstructed audio"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Jiahe Lei" },
    { name = "Qiuqiang Kong" },
]
maintainers = [
    { name = "Jiahe Lei" },
]
dependencies = [
    "numpy==2.2.6",
    "scipy==1.15.3",
    "soundfile==0.14.0",
]

[project.optional-dependencies]
paired = [
    "librosa==0.11.0",
    "pesq==0.0.4",
    "pystoi==0.4.1",
    "torch==2.7.1",
]
distribution = [
    "audiobox-aesthetics==0.0.4",
    "openl3==0.4.2",
    "panns-inference==0.1.1",
    "soxr==1.1.0",
    "tensorflow[and-cuda]==2.20.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
]
passt = [
    "passt @ git+https://github.com/hkchengrex/passt_hear21.git",
    "soxr==1.1.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
]
speech = [
    "funasr==1.3.14",
    "jiwer==3.1.0",
    "nemo_toolkit[asr]==2.6.1",
    "openai-whisper==20250625",
    "s3prl==0.4.18",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "transformers==4.53.3",
    "zhconv==1.4.3",
]
video = [
    "av_bench @ git+https://github.com/hkchengrex/av-benchmark.git@f351b9a6fc6abde746d5f8e1d4c47c883319cb41",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
]
test = ["pytest==9.1.1"]

[project.scripts]
audio-eval = "audio_eval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_eval*"]

[tool.setuptools.package-data]
audio_eval = ["assets/openl3_fd/*.md", "assets/openl3_fd/*.npz", "assets/passt_kl/*.md", "assets/passt_kl/*.pkl", "assets/prompts/*.csv", "assets/prompts/*.md", "presets/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
